styles/app.css
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    color: #fff;
    background: url("../images/bg.jpg") no-repeat;
    background-size: 120vw 104vh;
    font-size: 16px;
    overflow-x: hidden;
}

@media only screen and (min-width: 800px) {
    .ng-view {
        display: none;
    }

    .error {
        background: url("../images/error-bg.jpg");
        background-size: 100% 100%;
        height: 100vh;
        width: 100vw;
    }

    .card-dark {
        /*height: 200px;*/
        width: 500px;
        background: rgba(0, 0, 0, 0.7);
        margin: 0 auto;
        color: #fff;
        padding: 25px;
        text-align: center;
        border-radius: 5px;
    }

    .table {
        height: 100vh;
        width: 100vw;
        text-align: center;
    }
}

@media only screen and (max-width: 800px) {
    .error {
        display: none;
    }
}

@media only screen and (max-width: 350px) {
    .body {
        font-size: 10px !important;
    }
}

.logo {
    max-width: 100vw;
    max-height: 22vh;
    margin: 15px auto;
}

.ng-view {
    background: rgba(0, 0, 0, 0.4);
    min-height: 100vh;
}

.titlebar {
    height: 40px;
    width: 100%;
    background: rgb(162, 51, 10);
}

.form-container {
    width: 100%;
    color: #fff;
    min-height: 100px;
    padding: 15px;
    background: rgba(0, 0, 0, 0.5);
}

.table {
    display: table;
    margin: 0;
    padding: 0;
}

.table-cell {
    display: table-cell;
    text-align: center;
    vertical-align: middle
}

.height-40vh {
    height: 90vh;
}

.absolute {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

.input-text {
    width: 100%;
    border: none;
    height: 35px;
    padding: 0 8px;
    border-radius: 2px;
    color: #9a9797;
    margin: 8px 0;
    font-weight: bold;
}

.input-text:focus {
    border: orangered;
}

.btn-orange {
    width: 100%;
    border: none;
    height: 35px;
    padding: 5px;
    margin: 8px 0;
    color: #fff;
    border-radius: 2px;
    background: orangered;
}

.add-info {
    padding: 0 15px;
    color: #fff;
}

.no-margin {
    margin: 0;
}

.fa-bg-circle {
    height: 25px;
    width: 25px;
    background: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    text-align: center;
}

.fa-bg-circle:before {
    position: absolute;
    display: block;
    margin: 5px auto;
    padding-left: 8px;
}

h5 {
    line-height: 25px;
    vertical-align: middle;
}

.bg-green {
    background: #4caf50 !important;
}

.title {
    color: #fff;
    line-height: 40px;
    vertical-align: middle;
    text-align: center;
}

.menu {
    padding: 10px;
    color: #fff;
    text-align: center;
}

.active {
    font-weight: bold;
}

.menu-edit {
    font-size: 100%;
    display: block;
    width: 100%;
    height: 100%;
}

.line {
    position: relative;
    font-size: 16px;
    z-index: 1;
    overflow: hidden;
    text-align: center;
    width: 80%;
    margin: 5px auto;
    color: #fff;
}

.line:before {
    position: absolute;
    top: 51%;
    overflow: hidden;
    width: 50%;
    height: 1px;
    content: '\a0';
    background-color: #fff;
    margin-left: -50%;
    text-align: right;
}

.line:after {
    position: absolute;
    top: 51%;
    overflow: hidden;
    width: 50%;
    height: 1px;
    content: '\a0';
    background-color: #fff;
}

.balance {
    padding: 15px;
    background: #4caf50;
    margin: 0 5px;
    border-radius: 50%;
    font-weight: bold;
}

.log-title {
    text-align: center;
}

.tag-header {
    background-color: rgba(76, 175, 80, 0.84);
    padding: 5px;
}

.tag-body {
    background-color: rgba(85, 85, 85, 0.76);
    font-weight: bold;
    padding: 5px;
}

.bg-orangered-transparent {
    background: rgba(255, 69, 0, 0.77) !important;
}

.border-white-xb {
    border: 1px solid #fff;
    border-bottom: none;
}

.border-white-xt {
    border: 1px solid #fff;
    border-top: none;
}

.list {
    padding: 15px;
    line-height: 2.5;
}

.list-item:nth-child(even) {
    color: #fff;
    background: rgba(85, 85, 85, 0.76);
}

.list-item:nth-child(odd) {
    color: #555;
    background: rgba(255, 255, 255, 0.76);
}

.width-16 {
    width: 16px;
}

.add-info .fa-money:before {
    padding-left: 5px !important;
}

.modal-dialog {
    color: #555555;
}

.input-filter-date {
    border: 1px solid #eee;
}

.menu-item {
    border: 1px solid #fff;
    padding: 6px;
}

.menu-item + .active {
    background: rgba(0, 0, 0, 0.5);
}

.active-grey-backdrop {
    background: rgba(0, 0, 0, 0.5);
}

.margin-t30 {
    margin-top: 30px;
}

.unstyled::-webkit-inner-spin-button {
    display: none;
    -webkit-appearance: none;
}

.btn-orange:active {
    opacity: 0.8;
}

.btn-orange:focus {
    outline: none;
}

.debit {
    border-left: 4px solid orangered;
}

.credit {
    border-left: 4px solid rgba(76, 175, 80, 0.84);
}

.confirm-container {
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.8);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    padding: 15px;
}

.confirm-wrapper {
    width: 100%;
    background: rgba(255, 255, 255, 0.8);
    border-radius: 5px;
}

.confirm-header {
    padding: 15px;
    color: #555;
}

.btn-white {
    color: #555;
    background: #fff;
}

.spinner-container {
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.8);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
    padding: 15px;
}

.spinner-wrapper {
    width: 100%;
    border-radius: 5px;
}

